# rust-desk-light

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.codex/environments/: environment.toml
.codex/skills/rust-desk-light-feature/: SKILL.md
.codex/skills/rust-desk-light-feature/agents/: openai.yaml
.github/workflows/: release.yml
assets/i18n/: zh-CN.toml
assets/icons/: rdl-icon.icns
config/: admin.template.toml  client.template.toml  server.template.toml
crates/admin/: Cargo.toml
crates/admin/src/: app.rs  client_binary.rs  command_menu.rs  execute.rs  i18n.rs  main.rs  runtime.rs  session.rs  theme.rs
crates/admin/src/app/: client_aliases.rs  client_builder.rs  client_groups.rs  client_map.rs  client_registry.rs  client_state.rs  client_table.rs  command_result.rs  event.rs  file_transfer.rs  network.rs  p2p_test.rs  settings.rs  status_bar.rs  (+6 more)
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/client/: Cargo.toml  build.rs
crates/client/src/: app.rs  capabilities.rs  client_network.rs  commands.rs  entry.rs  execute.rs  live_video_stream.rs  main.rs  outbound.rs  payload.rs  runtime.rs  session.rs  support.rs  windowing.rs  windows_service.rs
crates/config/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: binary.rs  error.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: audio_udp_relay.rs  main.rs  peer_writer.rs
docs/: ubuntu-x11-remote-desktop-testing.md
scripts/: smoke-test.bat  smoke-test.ps1  smoke-test.sh  start-dev.bat  start-dev.ps1  start-dev.sh  start-server-release.sh  start-server.sh
(+56 files in other folders)
