[package]
name = "rust-desk-light-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rdl-server-cli"
path = "src/main.rs"

[dependencies]
getrandom = "0.3.4"
maxminddb = "0.28.1"
rust-desk-light-config = { path = "../config" }
rust-desk-light-protocol = { path = "../protocol" }
rust-desk-light-version = { path = "../version" }
